--- a/src/app/core/sidenav/sidenav.component.html
+++ b/src/app/core/sidenav/sidenav.component.html
@@ -5,8 +5,8 @@
       <h1>TREBLE</h1>
     </div>
     <app-nav-links></app-nav-links>
-      <mat-divider></mat-divider>
-    <ng-container *ngIf="authService.isLoggedIn">
+    <mat-divider></mat-divider>
+    @if (authService.isLoggedIn) {
       <div class="my-collection">
         <div class="left-collection">
           <img ngSrc="assets/icons-svg/playlist.svg" width="20" height="20" alt="playlist icon"/>
@@ -17,22 +17,19 @@
             <img ngSrc="assets/icons-svg/plus.svg" alt="plus,icon" height="20" width="20"/>
           </button>
         </div>
-
       </div>
       <div class="tabs">
         <mat-tab-group animationDuration="0" disablePagination>
           <mat-tab label="Playlists">
             <div class="playlists">
-              <ng-container *ngIf="playlists.length; else noPlaylists">
-                <ng-container *ngFor="let playlist of playlists">
+              @if (playlists.length) {
+                @for (playlist of playlists; track playlist) {
                   <app-user-playlist-list [playlist]="playlist"></app-user-playlist-list>
-                </ng-container>
-              </ng-container>
-              <ng-template #noPlaylists>
+                }
+              } @else {
                 <p class="no-result">Create playlists to see them here</p>
-              </ng-template>
-             <!-- <input type="text" placeholder="Search playlists"/>-->
-
+              }
+              <!-- <input type="text" placeholder="Search playlists"/>-->
             </div>
           </mat-tab>
           <mat-tab label="Artists">
@@ -45,9 +42,8 @@
           </mat-tab>
         </mat-tab-group>
       </div>
-
       <mat-divider></mat-divider>
-    </ng-container>
+    }
 
   </mat-sidenav>
   <mat-sidenav-content class="main-content">
