--- a/src/app/admin/albums/album-table/album-table.component.html
+++ b/src/app/admin/albums/album-table/album-table.component.html
@@ -11,29 +11,31 @@
     </tr>
   </thead>
   <tbody>
-  <ng-container *ngFor="let album of pagedResponse.data; let index = index">
-    <tr>
-      <td>{{pagedResponse.from + index}}</td>
-      <td>{{album.name}}</td>
-      <td>{{album.tracks_count}}</td>
-      <td>{{album.release_year}}</td>
-      <td>{{album.created_at}}</td>
-      <td>{{album.updated_at}}</td>
-      <td class="actions">
-        <button (click)="openEditDialog(album)">Edit</button>
-        <button (click)="openDeleteDialog(album.id,album.name, 'albums', pagedResponse.current_page)" class="delete">Delete</button>
-      </td>
-    </tr>
-  </ng-container>
+    @for (album of pagedResponse.data; track album; let index = $index) {
+      <tr>
+        <td>{{pagedResponse.from + index}}</td>
+        <td>{{album.name}}</td>
+        <td>{{album.tracks_count}}</td>
+        <td>{{album.release_year}}</td>
+        <td>{{album.created_at}}</td>
+        <td>{{album.updated_at}}</td>
+        <td class="actions">
+          <button (click)="openEditDialog(album)">Edit</button>
+          <button (click)="openDeleteDialog(album.id,album.name, 'albums', pagedResponse.current_page)" class="delete">Delete</button>
+        </td>
+      </tr>
+    }
   </tbody>
 </table>
 <div class="pagination">
 
   <!-- <button matRipple (click)="navigateToPreviousPage()" *ngIf="pagedResponse.prev_page_url">Previous page</button>-->
-  <ng-container *ngFor="let page of pagedResponse.links">
-    <button class="button" (click)="navigateTo(page.url)" mat-button *ngIf="page.url" [ngClass]="{'active-pagination' : page.active}">
-      <span [innerHTML]="page.label"></span>
-    </button>
-  </ng-container>
+  @for (page of pagedResponse.links; track page) {
+    @if (page.url) {
+      <button class="button" (click)="navigateTo(page.url)" mat-button [ngClass]="{'active-pagination' : page.active}">
+        <span [innerHTML]="page.label"></span>
+      </button>
+    }
+  }
   <!-- <button matRipple (click)="navigateToNextPage()" *ngIf="pagedResponse.next_page_url">Next page</button>-->
 </div>
