--- a/src/app/admin/genres/genre-table/genre-table.component.html
+++ b/src/app/admin/genres/genre-table/genre-table.component.html
@@ -1,38 +1,39 @@
 <table class="admin-table">
   <thead>
-  <tr>
-    <th>#</th>
-    <th>Name</th>
-    <th>Created at</th>
-    <th>Updated at</th>
-    <th></th>
-  </tr>
+    <tr>
+      <th>#</th>
+      <th>Name</th>
+      <th>Created at</th>
+      <th>Updated at</th>
+      <th></th>
+    </tr>
   </thead>
   <tbody>
-  <ng-container *ngFor="let genre of pagedResponse.data; let index = index">
-    <tr>
-      <td>{{pagedResponse.from + index}}</td>
-      <td class="cover-text">
-        <img src="{{genre.cover}}">
+    @for (genre of pagedResponse.data; track genre; let index = $index) {
+      <tr>
+        <td>{{pagedResponse.from + index}}</td>
+        <td class="cover-text">
+          <img src="{{genre.cover}}">
         {{genre.name}}</td>
-      <td>{{genre.formatted_created_at}}</td>
-      <td>{{genre.formatted_updated_at}}</td>
-      <td class="actions">
-        <button (click)="openEditDialog(genre)">Edit</button>
-
-        <button (click)="openDeleteDialog(genre.id,genre.name, 'genres', pagedResponse.current_page)" class="delete">Delete</button>
-      </td>
-    </tr>
-  </ng-container>
+        <td>{{genre.formatted_created_at}}</td>
+        <td>{{genre.formatted_updated_at}}</td>
+        <td class="actions">
+          <button (click)="openEditDialog(genre)">Edit</button>
+          <button (click)="openDeleteDialog(genre.id,genre.name, 'genres', pagedResponse.current_page)" class="delete">Delete</button>
+        </td>
+      </tr>
+    }
   </tbody>
 </table>
 <div class="pagination">
 
   <!-- <button matRipple (click)="navigateToPreviousPage()" *ngIf="pagedResponse.prev_page_url">Previous page</button>-->
-  <ng-container *ngFor="let page of pagedResponse.links">
-    <button class="button" (click)="navigateTo(page.url)" mat-button *ngIf="page.url" [ngClass]="{'active-pagination' : page.active}">
-      <span [innerHTML]="page.label"></span>
-    </button>
-  </ng-container>
+  @for (page of pagedResponse.links; track page) {
+    @if (page.url) {
+      <button class="button" (click)="navigateTo(page.url)" mat-button [ngClass]="{'active-pagination' : page.active}">
+        <span [innerHTML]="page.label"></span>
+      </button>
+    }
+  }
   <!-- <button matRipple (click)="navigateToNextPage()" *ngIf="pagedResponse.next_page_url">Next page</button>-->
 </div>
