--- a/src/app/albums/album-detail/album-detail.component.html
+++ b/src/app/albums/album-detail/album-detail.component.html
@@ -1,31 +1,37 @@
 
-  <div class="album">
+<div class="album">
 
-    <div class="top" #background>
+  <div class="top" #background>
 
-        <ng-container *ngIf="isLoaded; else loading">
-          <div class="backdrop"></div>
-          <img class="cover" src="{{album.cover}}">
-          <div class="info">
-            <h1>{{album.name}}</h1>
-            <p>{{album.tracks_count}} tracks</p>
-            <p>{{album.release_year}}</p>
-            <div class="artist">
-              <a routerLink="/artists/{{album.artist.id}}">
-                <img src="{{album.artist.cover}}"/>
-                {{album.artist.name}}
-              </a>
-            </div>
-          </div>
-        </ng-container>
-    </div>
-    <div class="bottom" *ngIf="isLoaded;">
+    @if (isLoaded) {
+      <div class="backdrop"></div>
+      <img class="cover" src="{{album.cover}}">
+      <div class="info">
+        <h1>{{album.name}}</h1>
+        <p>{{album.tracks_count}} tracks</p>
+        <p>{{album.release_year}}</p>
+        <div class="artist">
+          <a routerLink="/artists/{{album.artist.id}}">
+            <img src="{{album.artist.cover}}"/>
+            {{album.artist.name}}
+          </a>
+        </div>
+      </div>
+    } @else {
+      <div class="loading">
+        <app-loading></app-loading>
+      </div>
+    }
+  </div>
+  @if (isLoaded;) {
+    <div class="bottom">
       <button class="play" (click)="playAlbum(album.tracks)">
         <img src="assets/icons-svg/play.svg" alt="play,icon">
       </button>
       <app-track-table [tracks]="album.tracks" [from]="from"></app-track-table>
     </div>
-  </div>
+  }
+</div>
 <ng-template #loading>
   <div class="loading">
     <app-loading></app-loading>
