--- a/src/app/artists/artist-detail/artist-detail.component.html
+++ b/src/app/artists/artist-detail/artist-detail.component.html
@@ -1,34 +1,33 @@
 <div class="artist">
   <div class="top" #top>
-  <ng-container *ngIf="loaded; else notLoaded">
-
+    @if (loaded) {
       <div class="info">
         <div class="top-section">
           <img src="{{artist.cover}}"/>
           <div class="actions">
             <h1>{{artist.name}}</h1>
-            <button *ngIf="!isFollowing" (click)="followArtist(artist)">
-              <img src="assets/icons-svg/plus.svg" alt="plus,icon"/>
+            @if (!isFollowing) {
+              <button (click)="followArtist(artist)">
+                <img src="assets/icons-svg/plus.svg" alt="plus,icon"/>
               Follow</button>
-            <button *ngIf="isFollowing" (click)="unfollowArtist(artist)">
-              <img src="assets/icons-svg/check.svg" alt="check,icon"/>
+            }
+            @if (isFollowing) {
+              <button (click)="unfollowArtist(artist)">
+                <img src="assets/icons-svg/check.svg" alt="check,icon"/>
               Following</button>
+            }
           </div>
         </div>
         <div class="lower-section">
-
         </div>
-
-
-
       </div>
-  </ng-container>
-    </div>
-  <ng-container *ngIf="loaded">
+    } @else {
+      <app-loading></app-loading>
+    }
+  </div>
+  @if (loaded) {
     <div class="bottom" #bottom>
-
       <div class="section">
-
         <div class="play">
           <button>
             <img src="assets/icons-svg/play.svg">
@@ -46,31 +45,31 @@
         </div>
         <app-track-table [tracks]="artist.feature_tracks" [from]="fromFeatures"></app-track-table>
       </div>
-      <div class="section" *ngIf="artist.albums_count > 0">
-        <div class="play">
-          <h2>Albums</h2>
+      @if (artist.albums_count > 0) {
+        <div class="section">
+          <div class="play">
+            <h2>Albums</h2>
+          </div>
+          <div class="albums">
+            @for (album of artist.albums; track album) {
+              <app-album-card [album]="album"></app-album-card>
+            }
+          </div>
         </div>
-        <div class="albums">
-          <ng-container *ngFor="let album of artist.albums">
-            <app-album-card [album]="album"></app-album-card>
-          </ng-container>
+      }
+      @if (artist.featured_albums.length > 0) {
+        <div class="section">
+          <div class="play">
+            <h2>Featured albums</h2>
+          </div>
+          <div class="albums">
+            @for (album of artist.featured_albums; track album) {
+              <app-album-card [album]="album"></app-album-card>
+            }
+          </div>
         </div>
-      </div>
-      <div class="section" *ngIf="artist.featured_albums.length > 0">
-        <div class="play">
-          <h2>Featured albums</h2>
-        </div>
-        <div class="albums">
-          <ng-container *ngFor="let album of artist.featured_albums">
-            <app-album-card [album]="album"></app-album-card>
-          </ng-container>
-        </div>
-      </div>
-
+      }
     </div>
-  </ng-container>
-  <ng-template #notLoaded>
-    <app-loading></app-loading>
-  </ng-template>
+  }
 
 </div>
