--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,9 @@
 
 
-<ng-container *ngIf="loading; else loaded">
+@if (loading) {
   <app-loading></app-loading>
-
-</ng-container>
-<ng-template #loaded>
+} @else {
   <div class="container">
-
-
-
     <h1>Recently played</h1>
     <div class="cards">
       <app-track-table [tracks]="recentTracks" [from]="from"></app-track-table>
@@ -17,17 +12,17 @@
   <div class="container">
     <h1>Latest albums added</h1>
     <div class="cards">
-      <ng-container *ngFor="let album of albums">
+      @for (album of albums; track album) {
         <app-album-card [album]="album"></app-album-card>
-      </ng-container>
+      }
     </div>
   </div>
   <div class="container">
     <h1>Other similiar users also listen to</h1>
     <div class="cards">
-      <ng-container *ngFor="let artist of recommendedArtists">
+      @for (artist of recommendedArtists; track artist) {
         <app-artist-round-card [artist]="artist"></app-artist-round-card>
-      </ng-container>
+      }
     </div>
   </div>
   <div class="container">
@@ -36,5 +31,4 @@
       <app-track-table [tracks]="recommendedTracks" [from]="from"></app-track-table>
     </div>
   </div>
-
-</ng-template>
+}
